kafka demos producer and consumer with String key and values